--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
       th, td { border-bottom:1px solid #eee; padding:8px; text-align:left; }
       input, select, button, textarea { font: inherit; padding:6px 8px; border:1px solid #ccc; border-radius:8px; }
       button.primary { background:#111; color:#fff; border-color:#111; }
-      .container { max-width: none; width: 100%; margin: 0 auto; padding: 16px 24px; }
+      .container { max-width: none; width: min(96vw, 1920px); margin: 0 auto; padding: 16px 24px; }
       .row { display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
       .muted { color:#777; }
       .badge { font-size: 12px; background:#f5f5f5; border:1px solid #e6e6e6; padding:2px 8px; border-radius:999px; }
