--- a/ui/index.html
+++ b/ui/index.html
@@ -1,29 +1,251 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- Set this to your Render API base if you want to override at build time -->
+    <meta name="api-base" content="https://vasuida1.onrender.com"/>
     <title>velOzity Ops</title>
+
+    <!-- (Optional) Tailwind for quick utility on the Ops tile; the React app can still use its own styles -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <style>
       :root { font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; }
       body { margin:0; }
       header { display:flex; align-items:center; gap:.75rem; padding:12px 16px; border-bottom:1px solid #eee; }
       header a { text-decoration:none; color:#222; padding:6px 10px; border-radius:8px; }
       header a.active { background:#111; color:#fff; }
-      table { border-collapse: collapse; width: 100%; }
-      th, td { border-bottom:1px solid #eee; padding:8px; text-align:left; }
-      input, select, button, textarea { font: inherit; padding:6px 8px; border:1px solid #ccc; border-radius:8px; }
+      table { border-collapse:collapse; width:100%; }
+      th,td { border-bottom:1px solid #eee; padding:8px; text-align:left; }
+      input,select,button,textarea { font:inherit; padding:6px 8px; border:1px solid #ccc; border-radius:8px; }
       button.primary { background:#111; color:#fff; border-color:#111; }
-      .container { max-width: none; width: min(96vw, 1920px); margin: 0 auto; padding: 16px 24px; }
-      .row { display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
-      .muted { color:#777; }
-      .badge { font-size: 12px; background:#f5f5f5; border:1px solid #e6e6e6; padding:2px 8px; border-radius:999px; }
-      .right { margin-left:auto; }
-      .card { border:1px solid #eee; border-radius:12px; padding:12px; }
+      .container { max-width:none; width:min(96vw, 1920px); margin:0 auto; padding:16px 24px; }
+
+      /* --- Ops Tile --- */
+      .ops-fixed {
+        position: fixed; top: 88px; right: max(16px, calc((100vw - min(96vw, 1920px))/2 + 16px));
+        width: 320px; max-height: calc(100vh - 112px); overflow: auto;
+        z-index: 30;
+      }
+      .ops-hidden { display:none; }
+      /* prevent the tile from overlapping on tiny screens */
+      @media (max-width: 1024px) {
+        .ops-fixed { position: static; width: 100%; max-height: none; margin-top: 12px; }
+      }
+      /* simple pulse dot */
+      @keyframes beat { 0% { transform: scale(1);} 25% { transform: scale(1.18);} 50% { transform: scale(1);} 75% { transform: scale(1.1);} 100% { transform: scale(1);} }
+      .beat { animation: beat 1.2s ease-in-out infinite; transform-origin:center; }
     </style>
   </head>
   <body>
+    <!-- React app mounts here (unchanged) -->
     <div id="root"></div>
+
+    <!-- Right-side OPS TILE (outside React so we can ship today with zero app changes) -->
+    <aside id="ops-tile" class="ops-fixed ops-hidden">
+      <div class="bg-white/95 backdrop-blur border rounded-2xl shadow p-4">
+        <div class="flex items-center justify-between mb-2">
+          <div class="text-base font-semibold text-gray-700">Intake • Ops</div>
+          <div class="flex items-center gap-2 text-xs text-gray-500">
+            <span id="ops-last-updated">—</span>
+            <span class="inline-flex items-center gap-1 px-2 py-0.5 rounded-full border text-[11px]" id="ops-conn">
+              <span class="w-2 h-2 rounded-full bg-gray-300" id="ops-dot"></span>SSE
+            </span>
+          </div>
+        </div>
+
+        <!-- Throughput -->
+        <div class="grid grid-cols-2 gap-2 mb-3">
+          <div class="border rounded-xl p-3">
+            <div class="text-xs text-gray-500">Scans Today</div>
+            <div class="text-2xl font-bold tabular-nums" id="ops-today">0</div>
+          </div>
+          <div class="border rounded-xl p-3">
+            <div class="text-xs text-gray-500">Last Hour</div>
+            <div class="text-2xl font-bold tabular-nums" id="ops-hour">0</div>
+          </div>
+        </div>
+
+        <!-- Pulse -->
+        <div class="flex items-center gap-3 border rounded-xl p-3 mb-3">
+          <svg width="20" height="20" viewBox="0 0 24 24" class="beat">
+            <path d="M12.76 3.64c-1.53-1.4-3.99-1.34-5.45.12-1.46 1.46-1.52 3.92-.12 5.45l5.81 5.96 5.81-5.96c1.4-1.53 1.34-3.99-.12-5.45-1.46-1.46-3.92-1.52-5.45-.12z" fill="#ef4444" />
+          </svg>
+          <div>
+            <div class="text-xs text-gray-500">Throughput / hour (last 30m)</div>
+            <div class="text-xl font-bold tabular-nums" id="ops-rate">0</div>
+          </div>
+        </div>
+
+        <!-- Quality -->
+        <div class="border rounded-xl p-3 mb-3">
+          <div class="text-sm font-semibold text-gray-700 mb-2">Data Quality</div>
+          <div class="flex items-center justify-between text-sm mb-1">
+            <span class="text-gray-600">Drafts (missing fields)</span>
+            <span class="font-semibold" id="ops-drafts">0</span>
+          </div>
+          <div class="flex items-center justify-between text-sm mb-1">
+            <span class="text-gray-600">Duplicates (today)</span>
+            <span class="font-semibold" id="ops-dupes">0</span>
+          </div>
+          <div class="text-xs text-gray-500 mt-2">Sync states</div>
+          <div class="flex flex-wrap gap-2 mt-1" id="ops-sync-badges"></div>
+        </div>
+
+        <!-- Alerts -->
+        <div class="border rounded-xl p-3">
+          <div class="text-sm font-semibold text-gray-700 mb-2">Alerts</div>
+          <ul class="list-disc pl-5 text-sm text-gray-700 space-y-1" id="ops-alerts">
+            <li class="text-gray-400">No alerts.</li>
+          </ul>
+        </div>
+      </div>
+    </aside>
+
+    <!-- React boot -->
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Tile wiring (vanilla JS; uses your existing backend endpoints) -->
+    <script>
+      // ---- Config ----
+      const API_BASE = (() => {
+        const m = document.querySelector('meta[name="api-base"]');
+        return (m && m.content) ? m.content.replace(/\/+$/,'') : '';
+      })();
+      const qs = (s, el=document)=>el.querySelector(s);
+
+      // Show/hide tile only on #/intake
+      function toggleTileByRoute() {
+        const onIntake = location.hash.startsWith('#/intake') || location.hash === '#intake';
+        qs('#ops-tile').classList.toggle('ops-hidden', !onIntake);
+      }
+      window.addEventListener('hashchange', toggleTileByRoute);
+      toggleTileByRoute();
+
+      // ---- Helpers ----
+      const todayISO = () => {
+        const d = new Date(); d.setHours(0,0,0,0);
+        return d.toISOString().slice(0,10);
+      };
+      const isoToDate = s => s ? new Date(s) : null;
+
+      function summarize(records) {
+        const now = Date.now();
+        const oneHourAgo = now - 60*60*1000;
+        const halfHourAgo = now - 30*60*1000;
+
+        let scansToday = 0, scansLastHour = 0, ratePerHour = 0, drafts = 0;
+        const syncCounts = {};
+        const seen = new Map(); // key = sku#uid
+
+        // Determine duplicates for "today" by (sku_code, uid)
+        let dupesToday = 0;
+
+        for (const r of records) {
+          const isToday = r.date_local === todayISO();
+          if (!isToday) continue;
+
+          if (r.status === 'complete') {
+            scansToday++;
+            // completed_at may be null for drafts; only count if present
+            const ct = isoToDate(r.completed_at)?.getTime();
+            if (ct && ct >= oneHourAgo) scansLastHour++;
+            if (ct && ct >= halfHourAgo) ratePerHour++; // rough: count last 30m; scale below
+            const key = (r.sku_code||'') + '|' + (r.uid||'');
+            if (r.sku_code && r.uid) {
+              if (seen.has(key)) dupesToday++;
+              else seen.set(key, true);
+            }
+          } else {
+            drafts++;
+          }
+
+          const s = (r.sync_state||'unknown');
+          syncCounts[s] = (syncCounts[s]||0)+1;
+        }
+
+        // Convert last-30m count to per-hour
+        ratePerHour = Math.round(ratePerHour * 2);
+
+        return { scansToday, scansLastHour, drafts, dupesToday, ratePerHour, syncCounts };
+      }
+
+      function badge(text, tone='gray') {
+        const tones = {
+          gray:  'border-gray-300 text-gray-700 bg-gray-50',
+          green: 'border-green-300 text-green-800 bg-green-50',
+          amber: 'border-amber-300 text-amber-900 bg-amber-50',
+          red:   'border-red-300 text-red-800 bg-red-50'
+        };
+        return `<span class="inline-flex items-center gap-1 px-2 py-0.5 rounded-full border text-[11px] ${tones[tone]||tones.gray}">${text}</span>`;
+      }
+
+      function toneFor(name){
+        if (name === 'synced') return 'green';
+        if (name === 'error' || name === 'failed') return 'red';
+        if (name === 'unknown') return 'amber';
+        return 'gray';
+      }
+
+      function renderMetrics(m) {
+        qs('#ops-today').textContent = (m.scansToday||0).toLocaleString();
+        qs('#ops-hour').textContent = (m.scansLastHour||0).toLocaleString();
+        qs('#ops-rate').textContent = (m.ratePerHour||0).toLocaleString();
+
+        qs('#ops-drafts').textContent = (m.drafts||0).toLocaleString();
+        qs('#ops-dupes').textContent = (m.dupesToday||0).toLocaleString();
+
+        const syncEl = qs('#ops-sync-badges');
+        syncEl.innerHTML = '';
+        Object.entries(m.syncCounts||{}).sort((a,b)=>b[1]-a[1]).forEach(([name,count])=>{
+          syncEl.insertAdjacentHTML('beforeend', badge(`${name}: ${count}`, toneFor(name)));
+        });
+
+        // simple alerts
+        const alerts = [];
+        if (m.drafts > 0) alerts.push(`There ${m.drafts===1?'is':'are'} ${m.drafts} draft${m.drafts===1?'':'s'} to complete.`);
+        if (m.dupesToday > 0) alerts.push(`${m.dupesToday} duplicate UID${m.dupesToday===1?'':'s'} detected today.`);
+        qs('#ops-alerts').innerHTML = alerts.length
+          ? alerts.map(t=>`<li>${t}</li>`).join('')
+          : '<li class="text-gray-400">No alerts.</li>';
+
+        qs('#ops-last-updated').textContent = new Date().toLocaleTimeString();
+      }
+
+      async function loadMetrics() {
+        try {
+          const from = todayISO(), to = todayISO();
+          const url = `${API_BASE}/records?from=${from}&to=${to}&limit=2000`;
+          const r = await fetch(url, { credentials: 'omit' });
+          const data = await r.json();
+          const recs = Array.isArray(data?.records) ? data.records : [];
+          renderMetrics(summarize(recs));
+        } catch (e) {
+          // fail silently; leave last values in place
+          console.error('Ops tile metrics load failed:', e);
+        }
+      }
+
+      // SSE live updates (toggle status)
+      let es;
+      function openSSE() {
+        try {
+          es = new EventSource(`${API_BASE}/events/scan`);
+          qs('#ops-dot').style.background = '#10b981'; // green
+          qs('#ops-conn').className = qs('#ops-conn').className.replace('bg-gray-50','bg-green-50');
+          es.onmessage = () => loadMetrics();
+          es.onerror = () => { try { es.close(); } catch{}; setTimeout(openSSE, 3000); qs('#ops-dot').style.background='#f59e0b'; };
+        } catch (_) {
+          setTimeout(openSSE, 3000);
+        }
+      }
+
+      // Kickoff
+      loadMetrics();
+      openSSE();
+      // periodic refresh as a safety net
+      setInterval(loadMetrics, 30000);
+    </script>
   </body>
 </html>
