--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,25 @@
     /* ---------- Global & Layout ---------- */
     body { background:#f8fafc; color:#111827; }
     .vo-nav { position:sticky; top:0; z-index:40; background:#fff; border-bottom:1px solid #eee }
-    #vo-footer { position:fixed; left:0; right:0; bottom:0; z-index:50; font-size:12px; border-top:1px solid #e5e7eb; padding:.5rem .75rem; display:flex; gap:.75rem; align-items:center; background:#f8fafc; color:#334155 }
+    #vo-footer {
+  position: fixed;
+  left: 0; right: 0; bottom: 0;
+  z-index: 50;
+  font-size: 12px;
+
+  /* transparent footer — no bar */
+  background: transparent;   /* remove solid bar */
+  border-top: 0;             /* remove divider */
+
+  /* layout */
+  padding: .5rem .75rem;
+  display: flex;
+  gap: .75rem;
+  align-items: center;
+
+  /* inherit text color from the page */
+  color: inherit;
+}
     .vo-pill { border-radius:9999px; padding:.35rem .8rem; display:inline-flex; align-items:center; gap:.5rem }
     .vo-dot  { width:.5rem; height:.5rem; border-radius:9999px; display:inline-block }
     .heartbeat{ animation: heartbeat 1.2s ease-in-out infinite; transform-origin:center }
@@ -463,7 +481,7 @@
       const pill=$('#health-pill'), dot=$('#health-dot'); let cls='bg-amber-100 text-amber-900', d='bg-amber-500', bar='#f8fafc', text='#334155', label='plan';
       if(pct>=100){cls='bg-green-100 text-green-900'; d='bg-green-500'; bar='#ecfdf5'; text='#065f46'; label='ahead';}
       else if(pct<80){cls='bg-rose-100 text-rose-900'; d='bg-rose-500'; bar='#fef2f2'; text='#7f1d1d'; label='risk';}
-      $('#vo-footer').style.background=bar; $('#vo-footer').style.color=text; pill.className='vo-pill border '+cls; dot.className='vo-dot '+d; $('#vo-health').textContent=label;
+      pill.className='vo-pill border '+cls; dot.className='vo-dot '+d; $('#vo-health').textContent=label;
     }
 
     /* ---------- PLAN: load + render ---------- */
